# why

./: .gitignore  Cargo.toml  LICENSE  README.md  why.trace
.github/: FUNDING.yaml
src/: classify.rs  cli.rs  insights.rs  main.rs  report.rs  trace.rs  tui.rs
