[package]
name = "why"
version = "0.1.0"
edition = "2024"
description = "Linux CLI + TUI that explains where command time went using trace-based analysis."
license = "MIT"
readme = "README.md"
repository = "https://github.com/mredstone31/why"
keywords = ["linux", "cli", "tui", "strace", "debugging"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
crossterm = "0.29.0"
ratatui = "0.30.0"
tempfile = "3.27.0"